--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,13 +1,21 @@
+@media only screen and (max-width: 1020px) {
+   #message{
+    margin-top: 220px;
+   }
+   /* #createUser{
+      margin-top: 10px;
+   } */
+  }
+
+  @media only screen and (max-width: 350px) {
+    #logoname{
+     display: none
+    }
+   }
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* #inputtext{
-    display: flex;
-} */
 
-#input{
-    height: 100px;
-    width: 50%;
-    border: 0.5px solid black
-}
+@import url('https://fonts.googleapis.com/css2?family=Arapey:ital@0;1&family=Assistant:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap')
