--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,13 +1,16 @@
 doctype html
-html(lang="en")
+html(lang="en" class="bg-gray-100")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Action
+        title TeamUnity
+        link(rel="icon" type="image/vnd.icon" href="/img/favicon/favicon.ico")
         link(rel="stylesheet" href="/dist/style.css")
         link(rel="stylesheet" href="/style/style.css")
+        script(src="/javascript/index.js")
+        script(src="https://kit.fontawesome.com/090d5fde99.js" crossorigin="anonymous")
         script(src="https://cdn.tailwindcss.com")
-    body 
+        script(src="https://unpkg.com/axios/dist/axios.min.js")
         include includes/topbar.pug  
          
         block content
