--- a/views/home.pug
+++ b/views/home.pug
@@ -1,23 +1,5 @@
 extends layout.pug 
 
 block content 
-
-    form(action="" method="post" id='message' class="mt-28") 
-      .mb-4.border.border-gray-300.rounded-lg.bg-gray-50(class="w-8/12 m-auto font-nav1")
-        .px-4.py-2.bg-white.rounded-t-lg
-          label.sr-only(for='comment') Your comment
-          textarea#comment.px-0.text-sm.text-gray-900.bg-white.border-0.resize-none.outline-none(class="focus:border-gray-500",rows='4',placeholder='Quoi de neuf ?', required='')
-        .flex.items-center.justify-between.px-3.py-2.border-t
-          button.inline-flex.items-center.px-4(type='submit',class='text-xs py-2.5 text-white font-medium rounded-lg px-4 py-2 text-center bg-[#62b5e5] transition-all focus:opacity-[0.85] shadow-md shadow-cyan-600/40 active:opacity-[0.85] mr-2')
-            | Envoyer
-          .flex.ps-0.space-x-1(class='rtl:space-x-reverse sm:ps-2')
-            button.inline-flex.justify-center.items-center.p-2.text-gray-500.rounded.cursor-pointer(type='button', class='hover:text-gray-500 hover:bg-gray-100')
-              svg.w-4.h-4(aria-hidden='true', xmlns='http://www.w3.org/2000/svg', fill='none', viewBox='0 0 12 20')
-                path(stroke='currentColor', stroke-linejoin='round', stroke-width='2', d='M1 6v8a5 5 0 1 0 10 0V4.5a3.5 3.5 0 1 0-7 0V13a2 2 0 0 0 4 0V6')
-              span.sr-only Attach file
-            
-            button.inline-flex.justify-center.items-center.p-2.text-gray-500.rounded.cursor-pointer(type='button', class='hover:text-gray-500 hover:bg-gray-100 ')
-              svg.w-4.h-4(aria-hidden='true', xmlns='http://www.w3.org/2000/svg', fill='currentColor', viewBox='0 0 20 18')
-                path(d='M18 0H2a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2Zm-5.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Zm4.376 10.481A1 1 0 0 1 16 15H4a1 1 0 0 1-.895-1.447l3.5-7A1 1 0 0 1 7.468 6a.965.965 0 0 1 .9.5l2.775 4.757 1.546-1.887a1 1 0 0 1 1.618.1l2.541 4a1 1 0 0 1 .028 1.011Z')
-              span.sr-only Upload image
- 
+  include form.post.pug
+  include post.list.pug
