--- a/public/style/style.css
+++ b/public/style/style.css
@@ -2,9 +2,9 @@
    #message{
     margin-top: 220px;
    }
-   /* #createUser{
-      margin-top: 10px;
-   } */
+   #toptext{
+      margin-top: 220px;
+   }
   }
 
   @media only screen and (max-width: 350px) {
