--- a/views/post.list.pug
+++ b/views/post.list.pug
@@ -9,9 +9,10 @@ if posts
                 div
                     h5.font-bold.tracking-tight.text-gray-700.mb-2(class="xl:text-xl sm:text-base") #{post.username} - #{post.team}
                     img(src=`${post.avatar}`, alt="avatar" class='h-10')
-                div
-                    a(href="#" id="edit" class=" text-gray-600 fa-solid fa-pen-to-square mr-4")
-                    a(href="/post/"+post._id id="delete" class=" text-red-500 fa-solid fa-trash")
+                if user && user.username === post.username || admin
+                    div
+                        a(href="#" id="edit" class=" text-gray-600 fa-solid fa-pen-to-square mr-4") 
+                        a(href="/post/"+post._id id="delete" class=" text-red-500 fa-solid fa-trash")
             
             div.mb-4.font-nav1(class="grid justify-items-end")
                 p(class="xl:text-base sm:text-sm text-gray-700")=post.date
