--- a/views/post.list.pug
+++ b/views/post.list.pug
@@ -8,7 +8,7 @@ if posts
             div.flex.justify-between.font-nav1
                 div
                     h5.font-bold.tracking-tight.text-gray-700.mb-2(class="xl:text-xl sm:text-base") #{post.username} - #{post.team}
-                    img(src=`${post.avatar}`, alt="avatar" class='h-10')
+                    img(src=`${post.avatar}`, alt="avatar" class='h-10 rounded-full')
                 if user && user.username === post.username || admin
                     div
                         a(href="#" id="edit" class=" text-gray-600 fa-solid fa-pen-to-square mr-4") 
