--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,3 +1,8 @@
+#modalEdit, #modalDelete{
+   display: none;
+}
+
+
 @media only screen and (max-width: 1020px) {
    #message{
     margin-top: 220px;
