--- a/views/teams.pug
+++ b/views/teams.pug
@@ -5,7 +5,7 @@ block content
     div(class="grid grid-cols-2 lg:grid-cols-3 font-nav1 min-h-screen justify-items-center text-gray-700  w-10/12 m-auto")
             if teams
                 each team in teams
-                    div(class="bg-[#62b5e5] opacity-80 border border-gray-200 rounded-lg shadow w-1/2 m-10 hover:opacity-100 hover:shadow-lg")
+                    div(class="bg-[#FF8200] opacity-80 border border-gray-200 rounded-lg shadow w-1/2 m-10 hover:opacity-100 hover:shadow-lg")
                         h2(class="text-center mt-2 text-base lg:text-xl mb-4")= team.teamname
                         div 
                             p(class="text-sm lg:text-lg mb-4 text-center") Capitaine : #{team.captain}             
