--- a/views/modals/modal.delete.profil.pug
+++ b/views/modals/modal.delete.profil.pug
@@ -1,5 +1,7 @@
-div(class='mt-48 w-6/12 m-auto font-nav1 absolute top-0 left-40 right-40 h-96' id="modalDelete").bg-gray-300.border.border-gray-200.rounded-lg.shadow
-        form(action="/delete/profil", method="post", class="flex flex-col items-center py-5")
-            p Etes-vous sûr de vouloir supprimer votre compte ?
-            button.rounded-lg.text-sm.px-5(type='submit', class='text-white font-medium rounded-lg px-4 py-2 text-center bg-[#62b5e5] transition-all focus:opacity-[0.85] shadow-md shadow-cyan-600/40 active:opacity-[0.85] xl:text-sm sd:text-xs') Oui
-        button(class="text-red-600" id="closeModalDelete") Non
+div(class='w-4/12 m-auto font-nav1' id="modalDelete")
+        form(action="users/delete/profil", method="post", class="flex flex-col items-center pt-5 pb-2")
+            p(class="text-sm lg:text-base") Etes-vous sûr de vouloir supprimer votre compte ?
+            
+            button.rounded-lg.text-sm.px-5.mt-2(type='submit', class='text-white font-medium rounded-lg px-4 py-2 text-center bg-[#62b5e5] transition-all focus:opacity-[0.85] shadow-md shadow-cyan-600/40 active:opacity-[0.85] xl:text-sm sd:text-xs') Oui
+        div(class="w-full text-center")
+            button.rounded-lg.text-sm.px-5(class="text-white font-medium rounded-lg px-4 py-2 text-center bg-red-600 transition-all focus:opacity-[0.85] shadow-md shadow-cyan-600/40 active:opacity-[0.85] xl:text-sm sd:text-xs" id="closeModalDelete") Non
