--- a/views/profil.pug
+++ b/views/profil.pug
@@ -23,7 +23,7 @@ block content
                     li
                     a.block.px-4.py-2.text-sm.text-red-600(class='hover:bg-gray-200 duration-100 lg:text-base cursor-pointer' id='deleteProfil') Supprimer votre compte
                     li 
-                    a.block.px-4.py-2.text-sm.text-gray-700(class='hover:bg-gray-200 duration-100 lg:text-base cursor-pointer' id="addScore") Ajouter le score d'un match    
+                    a.block.px-4.py-2.mb-2.text-sm.text-gray-700(class='hover:bg-gray-200 duration-100 lg:text-base cursor-pointer' id="addScore") Ajouter le score d'un match    
 
                 
     else                      
@@ -48,3 +48,4 @@ block content
 
     include modals/modal.edit.pug
     include modals/modal.delete.profil.pug
+    //- include modals/modal.add.score.pug
