Update routes, views, and models for teams and scores functionality

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,8 +5,8 @@ html(lang="en" class="bg-gray-100")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title TeamUnity
-        link(rel="stylesheet" href="style/output.css")
         link(rel="stylesheet" href="/style/style.css")
+        link(rel="stylesheet" href="/style/output.css")
         link(rel="icon" type="image/vnd.icon" href="/img/favicon/favicon.ico")
         script(src="https://kit.fontawesome.com/090d5fde99.js" crossorigin="anonymous")
         script(src="/javascript/index.js")
