--- a/views/profil.pug
+++ b/views/profil.pug
@@ -48,4 +48,4 @@ block content
 
     include modals/modal.edit.pug
     include modals/modal.delete.profil.pug
-    //- include modals/modal.add.score.pug
+    include modals/modal.add.score.pug
