Update styles and dependencies

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,6 +1,6 @@
 
 
-#modalEdit, #modalDelete{
+#modalEdit, #modalDelete, #modalAddScore{
   display: none;
 }
 
@@ -22,6 +22,10 @@
 
   #createUser{
      margin-top: 80px;
+  }
+
+  #ranking{
+     margin-top: 220px;
   }
  }
 
