Update styles, controllers, views, and queries

--- a/views/loginBis.pug
+++ b/views/loginBis.pug
@@ -31,6 +31,6 @@ block content
       .mb-5
       
         p(class="text-red-700 text-sm font-nav1")= error
-        h1 Vous devez vous connecter pour accéder à cette page
+        h1(class="text-center") Vous devez vous connecter pour accéder à cette page
       
       button.rounded-lg.text-sm.px-5(type='submit', class='text-white font-medium rounded-lg px-4 py-2 text-center bg-[#62b5e5] transition-all focus:opacity-[0.85] shadow-md shadow-cyan-600/40 active:opacity-[0.85] xl:text-sm sd:text-xs') Connexion
