--- a/views/profil.pug
+++ b/views/profil.pug
@@ -4,7 +4,7 @@ block content
     script(src="/javascript/upload.avatar.js")
     script(src="/javascript/modal.js")
     if admin
-        div(class='mt-48 w-6/12 m-auto font-nav1' id="profil").bg-gray-300.border.border-gray-200.rounded-lg.shadow
+        div(class='mt-48 mb-2 w-6/12 m-auto font-nav1' id="profil").bg-gray-300.border.border-gray-200.rounded-lg.shadow
             
             .flex.flex-col.items-center.py-5
                 form(action="/upload/avatar", method="post" id="formAvatar", enctype="multipart/form-data" class="relative")
