--- a/views/modals/modal.delete.profil.pug
+++ b/views/modals/modal.delete.profil.pug
@@ -1,5 +1,5 @@
 div(class='w-4/12 m-auto font-nav1' id="modalDelete")
-        form(action="users/delete/profil", method="post", class="flex flex-col items-center pt-5 pb-2")
+        form(action="users/delete/profil", method="post", class="flex flex-col items-center pb-2")
             p(class="text-sm lg:text-base") Etes-vous sûr de vouloir supprimer votre compte ?
             
             button.rounded-lg.text-sm.px-5.mt-2(type='submit', class='text-white font-medium rounded-lg px-4 py-2 text-center bg-[#62b5e5] transition-all focus:opacity-[0.85] shadow-md shadow-cyan-600/40 active:opacity-[0.85] xl:text-sm sd:text-xs') Oui
