--- a/views/modals/modal.edit.pug
+++ b/views/modals/modal.edit.pug
@@ -1,22 +1,19 @@
-div(class='mt-48 w-6/12 m-auto font-nav1 absolute top-0 left-40 right-40 h-96' id="modalEdit").bg-gray-300.border.border-gray-200.rounded-lg.shadow
-      form(action="users/edit/profil", method="post", class="flex flex-col items-center py-5")
-        
-        label.block.mb-2.text-sm.text-gray-900(for='email') Votre email
-        input#email.shadow-sm.bg-white.border.border-gray-300.text-gray-500.text-sm.rounded-lg.block.w-full.outline-none(type='email', class='focus:ring-[#62b5e5] focus:border-[#62b5e5] p-2.5', placeholder='name@flowbite.com',name="email")
-        .mb-5
-        label.block.mb-2.text-sm.text-gray-900(for='username') Votre nom
-        input#userName.shadow-sm.bg-white.border.border-gray-300.text-gray-500.text-sm.rounded-lg.block.w-full.outline-none(type='text', class='focus:ring-[#62b5e5] focus:border-[#62b5e5] p-2.5',placeholder="Jean",name="username")
-        .mb-5
-        label.block.mb-2.text-sm.text-gray-900(for='password') Votre mot de passe
-        input#password.shadow-sm.bg-white.border.border-gray-300.text-gray-500.text-sm.rounded-lg.block.w-full.outline-none(type='password', class='focus:ring-[#62b5e5] focus:border-[#62b5e5] p-2.5',placeholder="*********" name="password")
-        .mb-5
-        label.block.mb-2.text-sm.text-gray-900(for='team') Votre équipe
-        select#team.shadow-sm.bg-white.border.border-gray-300.text-gray-500.text-sm.rounded-lg.block.w-full.outline-none(type='text', class='focus:ring-[#62b5e5] focus:border-[#62b5e5] p-2.5' name="team")
-          option(selected='' value="No team") Choissisez votre équipe
-          
-            if teams
-              each team in teams 
-                option(value=team.id) #{team.teamname} 
-          
-        button.rounded-lg.text-sm.px-5(type='submit', class='text-white font-medium rounded-lg px-4 py-2 text-center bg-[#62b5e5] transition-all focus:opacity-[0.85] shadow-md shadow-cyan-600/40 active:opacity-[0.85] xl:text-sm sd:text-xs') modifier
-      button(class="text-red-600" id="closeModalEdit") Fermer
+div(id="modalEdit")
+      form(action="users/edit/profil", method="post", class="font-nav1 flex flex-col items-center py-5 w-4/12 m-auto border border-gray-200 bg-gray-300 rounded-lg shadow-lg")
+        div(class='w-6/12 m-auto text-center')
+          a(id="closeModalEdit" class="fa-solid fa-x text-red-600 mb-2")
+          label.block.mb-2.text-sm.text-gray-900(for='username') Modifier votre nom
+          input#userName.shadow-sm.bg-white.border.border-gray-300.text-gray-500.text-sm.rounded-lg.block.w-full.outline-none.text-center(type='text', class='focus:ring-[#62b5e5] focus:border-[#62b5e5] p-2.5',placeholder="Jean",name="username")
+          .mb-5
+          label.block.mb-2.text-sm.text-gray-900(for='password') Modifier votre mot de passe
+          input#password.shadow-sm.bg-white.border.border-gray-300.text-gray-500.text-sm.rounded-lg.block.w-full.outline-none.text-center(type='password', class='focus:ring-[#62b5e5] focus:border-[#62b5e5] p-2.5',placeholder="*********" name="password" default=null)
+          .mb-5
+          label.block.mb-2.text-sm.text-gray-900(for='team') Modifier votre équipe
+          select#team.shadow-sm.bg-white.border.border-gray-300.text-gray-500.text-sm.rounded-lg.block.w-full.outline-none.text-center.mb-4(type='text', class='focus:ring-[#62b5e5] focus:border-[#62b5e5] p-2.5' name="team")
+            option(selected='' value="") Choissisez votre équipe
+            
+              if teams
+                each team in teams 
+                  option(value=team.id) #{team.teamname} 
+            
+          button.rounded-lg.text-sm.px-5(type='submit', class='text-white font-medium rounded-lg px-4 py-2 text-center bg-[#62b5e5] transition-all focus:opacity-[0.85] shadow-md shadow-cyan-600/40 active:opacity-[0.85] xl:text-sm sd:text-xs') Modifier
