--- a/views/modals/modal.edit.pug
+++ b/views/modals/modal.edit.pug
@@ -1,19 +1,17 @@
 div(id="modalEdit")
-      form(action="users/edit/profil", method="post", class="font-nav1 flex flex-col items-center py-5 w-4/12 m-auto border border-gray-200 bg-gray-300 rounded-lg shadow-lg")
-        div(class='w-6/12 m-auto text-center')
-          a(id="closeModalEdit" class="fa-solid fa-x text-red-600 mb-2")
-          label.block.mb-2.text-sm.text-gray-900(for='username') Modifier votre nom
-          input#userName.shadow-sm.bg-white.border.border-gray-300.text-gray-500.text-sm.rounded-lg.block.w-full.outline-none.text-center(type='text', class='focus:ring-[#62b5e5] focus:border-[#62b5e5] p-2.5',placeholder="Jean",name="username")
-          .mb-5
-          label.block.mb-2.text-sm.text-gray-900(for='password') Modifier votre mot de passe
-          input#password.shadow-sm.bg-white.border.border-gray-300.text-gray-500.text-sm.rounded-lg.block.w-full.outline-none.text-center(type='password', class='focus:ring-[#62b5e5] focus:border-[#62b5e5] p-2.5',placeholder="*********" name="password" default=null)
-          .mb-5
-          label.block.mb-2.text-sm.text-gray-900(for='team') Modifier votre équipe
-          select#team.shadow-sm.bg-white.border.border-gray-300.text-gray-500.text-sm.rounded-lg.block.w-full.outline-none.text-center.mb-4(type='text', class='focus:ring-[#62b5e5] focus:border-[#62b5e5] p-2.5' name="team")
-            option(selected='' value="") Choissisez votre équipe
-            
-              if teams
-                each team in teams 
-                  option(value=team.id) #{team.teamname} 
-            
-          button.rounded-lg.text-sm.px-5(type='submit', class='text-white font-medium rounded-lg px-4 py-2 text-center bg-[#62b5e5] transition-all focus:opacity-[0.85] shadow-md shadow-cyan-600/40 active:opacity-[0.85] xl:text-sm sd:text-xs') Modifier
+  form(action="users/edit/profil", method="post", class="font-nav1 flex flex-col items-center py-5 w-4/12 m-auto border border-gray-200 bg-gray-300 rounded-lg shadow-lg")
+    div(class='w-6/12 m-auto text-center')
+      a(id="closeModalEdit" class="fa-solid fa-x text-red-600 mb-2")
+      label.block.mb-2.text-sm.text-gray-900(for='username') Modifier votre nom
+      input#userName.shadow-sm.bg-white.border.border-gray-300.text-gray-500.text-sm.rounded-lg.block.w-full.outline-none.text-center(type='text', class='focus:ring-[#62b5e5] focus:border-[#62b5e5] p-2.5',placeholder="Jean",name="username")
+      .mb-5
+      label.block.mb-2.text-sm.text-gray-900(for='password'  id="isEgal") Modifier votre mot de passe
+      input#password.shadow-sm.bg-white.border.border-gray-300.text-gray-500.text-sm.rounded-lg.block.w-full.outline-none.text-center(type='password', class='focus:ring-[#62b5e5] focus:border-[#62b5e5] p-2.5',placeholder="*********" name="password" default=null)
+      .mb-5
+      label.block.mb-2.text-sm.text-gray-900(for='team') Modifier votre équipe
+      select#team.shadow-sm.bg-white.border.border-gray-300.text-gray-500.text-sm.rounded-lg.block.w-full.outline-none.text-center.mb-4(type='text', class='focus:ring-[#62b5e5] focus:border-[#62b5e5] p-2.5' name="team")
+        option(selected='' value="") Choissisez votre équipe
+        if teams
+          each team in teams 
+            option(value=team.id) #{team.teamname} 
+      button.rounded-lg.text-sm.px-5(type='submit', id="subtmitEdit" class='text-white font-medium rounded-lg px-4 py-2 text-center bg-[#62b5e5] transition-all focus:opacity-[0.85] shadow-md shadow-cyan-600/40 active:opacity-[0.85] xl:text-sm sd:text-xs') Modifier
